# globe_40

./: LICENSE  clean_tsv.py  create_g40_bb_geojson.py  get_g40_course_gribs.py  globe_40_legs_2026.cleaned.tsv  globe_40_legs_2026.split_leg_4.geojson  globe_40_legs_2026.split_leg_4.tsv  globe_40_legs_2026.tsv  globe_40_legs_2026_bounding_boxes.geojson  pyproject.toml  test_leg_info.tsv
globe40/: reanalysis_retriever.py  utils.py
tests/: test_extend_interval.py  test_get_days_in_interval.py  test_reanalysis_retriever.py
